--- a/main.html
+++ b/main.html
@@ -4,10 +4,95 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+<h2>Cards Gallery</h2>
+	<div class="main-section">
+		<div class="row1 d-flex justify-content-around">
+			<div class="card">
+				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+		<img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" class="img-fluid">
+	</a>
+				<h6>Unique images</h6>
+				<p>This is a images </p>
+			</div>
+			<div class="card">
+				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+		<img src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" class="img-fluid">
+	</a>
+				<h6>Unique images</h6>
+				<p>This is a images </p>
+			</div>
+			<div class="card">
+				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+		<img src="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" class="img-fluid">
+	</a>
+				<h6>Unique images</h6>
+				<p>This is a images </p>
+			</div>
+		</div>
+
+		<div class="row2 d-flex justify-content-around">
+			<div class="card">
+				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+		<img src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" class="img-fluid">
+	</a>
+				<h6>Unique images</h6>
+				<p>This is a images </p>
+			</div>
+			<div class="card">
+				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+		<img src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" class="img-fluid">
+	</a>
+				<h6>Unique images</h6>
+				<p>This is a images </p>
+			</div>
+			<div class="card">
+				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+		<img src="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" class="img-fluid">
+	</a>
+				<h6>Unique images</h6>
+				<p>This is a images </p>
+			</div>
+		</div>
+
+		<div class="row2 d-flex justify-content-around">
+			<div class="card">
+				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image7.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+		<img src="https://storage.googleapis.com/acciojob-open-file-collections/image7.jpg" class="img-fluid">
+	</a>
+				<h6>Unique images</h6>
+				<p>This is a images </p>
+			</div>
+			<div class="card">
+				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image8.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+		<img src="https://storage.googleapis.com/acciojob-open-file-collections/image8.jpg" class="img-fluid">
+	</a>
+				<h6>Unique images</h6>
+				<p>This is a images </p>
+			</div>
+			<div class="card">
+				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image9.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+		<img src="https://storage.googleapis.com/acciojob-open-file-collections/image9.jpg" class="img-fluid">
+	</a>
+				<h6>Unique images</h6>
+				<p>This is a images </p>
+			</div>
+		</div>
+	</div>
+
+
+
+
+
+
+	
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
