--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 <h2>Cards Gallery</h2>
-	<div class="main-section">
+	<div class="container">
 		<div class="row1 d-flex justify-content-around">
 			<div class="card">
 				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" data-toggle="lightbox" data-gallery="example-gallery">
@@ -59,29 +59,6 @@
 			</div>
 		</div>
 
-		<div class="row2 d-flex justify-content-around">
-			<div class="card">
-				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image7.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-		<img src="https://storage.googleapis.com/acciojob-open-file-collections/image7.jpg" class="img-fluid">
-	</a>
-				<h6>Unique images</h6>
-				<p>This is a images </p>
-			</div>
-			<div class="card">
-				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image8.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-		<img src="https://storage.googleapis.com/acciojob-open-file-collections/image8.jpg" class="img-fluid">
-	</a>
-				<h6>Unique images</h6>
-				<p>This is a images </p>
-			</div>
-			<div class="card">
-				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image9.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-		<img src="https://storage.googleapis.com/acciojob-open-file-collections/image9.jpg" class="img-fluid">
-	</a>
-				<h6>Unique images</h6>
-				<p>This is a images </p>
-			</div>
-		</div>
 	</div>
 
 
