--- a/main.html
+++ b/main.html
@@ -12,21 +12,21 @@
 <h2>Cards Gallery</h2>
 	<div class="container">
 		<div class="row1 d-flex justify-content-around">
-			<div class="card">
+			<div class="card card-body">
 				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" data-toggle="lightbox" data-gallery="example-gallery">
 		<img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" class="img-fluid">
 	</a>
 				<h6>Unique images</h6>
 				<p>This is a images </p>
 			</div>
-			<div class="card">
+			<div class="card card-body">
 				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" data-toggle="lightbox" data-gallery="example-gallery">
 		<img src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" class="img-fluid">
 	</a>
 				<h6>Unique images</h6>
 				<p>This is a images </p>
 			</div>
-			<div class="card">
+			<div class="card card-body">
 				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" data-toggle="lightbox" data-gallery="example-gallery">
 		<img src="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" class="img-fluid">
 	</a>
@@ -36,21 +36,21 @@
 		</div>
 
 		<div class="row2 d-flex justify-content-around">
-			<div class="card">
+			<div class="card card-body">
 				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" data-toggle="lightbox" data-gallery="example-gallery">
 		<img src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" class="img-fluid">
 	</a>
 				<h6>Unique images</h6>
 				<p>This is a images </p>
 			</div>
-			<div class="card">
+			<div class="card card-body">
 				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" data-toggle="lightbox" data-gallery="example-gallery">
 		<img src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" class="img-fluid">
 	</a>
 				<h6>Unique images</h6>
 				<p>This is a images </p>
 			</div>
-			<div class="card">
+			<div class="card card-body">
 				<a href="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" data-toggle="lightbox" data-gallery="example-gallery">
 		<img src="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" class="img-fluid">
 	</a>
